# L7dstat

./: Cargo.toml  README.md  app.py  build.bat  index.html  install.sh  requirements.txt  start.bat
src/: main.rs
static/: app.js  styles.css
templates/: index.html
