[package]
name = "l7dstat"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[dependencies]
libc = "0.2"
mio = { version = "0.8", features = ["net", "os-poll"] }
num_cpus = "1.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
